# ODYX-VISUAL-SLAM

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_ASSETS.md
app/src/main/assets/calib/: cam_imu_extrinsics.yaml  camera_intrinsics.yaml  gnss_lever_arm.yaml  imu_noise.yaml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/backend/: factors.h  preintegrator.cpp  preintegrator.h  vio_backend.cpp  vio_backend.h
app/src/main/cpp/common/: config.h  log.h  math_util.h  odyx_types.h  snapshot.h  time.h
app/src/main/cpp/core/: estimator.cpp  estimator.h  gtsam_smoke.cpp
app/src/main/cpp/frontend/: calibrator.cpp  calibrator.h  feature_tracker.cpp  feature_tracker.h
app/src/main/cpp/gnss/: coupling.h  enu_alignment.cpp  gnss_fusion.h  loose_coupling.cpp  tight_coupling.cpp
app/src/main/cpp/init/: initializer.cpp  initializer.h
app/src/main/cpp/jni/: odyx_jni.cpp
app/src/main/cpp/loop/: loop_closer.cpp  loop_closer.h
app/src/main/cpp/map/: map_store.cpp  map_store.h
app/src/main/cpp/reloc/: relocalizer.cpp  relocalizer.h
app/src/main/cpp/sync/: sensor_sync.cpp  sensor_sync.h
app/src/main/kotlin/ai/deepmost/odyx/: OdyxApp.kt
app/src/main/kotlin/ai/deepmost/odyx/allan/: AllanLogger.kt
app/src/main/kotlin/ai/deepmost/odyx/camera/: Camera2Controller.kt
app/src/main/kotlin/ai/deepmost/odyx/config/: CalibLoader.kt  OdyxConfig.kt  SettingsStore.kt
app/src/main/kotlin/ai/deepmost/odyx/core/: OdyxController.kt  OdyxEngine.kt  SensorSink.kt
app/src/main/kotlin/ai/deepmost/odyx/gnss/: GnssManager.kt
app/src/main/kotlin/ai/deepmost/odyx/imu/: ImuManager.kt
app/src/main/kotlin/ai/deepmost/odyx/jni/: NativeBridge.kt  Snapshots.kt
app/src/main/kotlin/ai/deepmost/odyx/persist/: MapPersistence.kt  TrajectoryLogger.kt
app/src/main/kotlin/ai/deepmost/odyx/pose/: OdyxPoseProvider.kt  PoseProvider.kt
app/src/main/kotlin/ai/deepmost/odyx/service/: CaptureService.kt
app/src/main/kotlin/ai/deepmost/odyx/session/: SessionRecorder.kt  SessionReplayer.kt  SessionStore.kt  ZipExporter.kt
app/src/main/kotlin/ai/deepmost/odyx/time/: TimeBase.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/: MainActivity.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/calib/: CheckerboardCalibScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/common/: Components.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/map/: MapRenderer.kt  MapScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/sessions/: SessionsScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/settings/: SettingsScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/slam/: CameraPreview.kt  SlamScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/telemetry/: TelemetryScreen.kt
app/src/main/kotlin/ai/deepmost/odyx/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_odyx.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: BUILD.md
gradle/: libs.versions.toml
scripts/: build_boost_android.sh  env_check.sh  fetch_deps.sh
